initial referral model for qt wallet

--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>644</width>
-    <height>442</height>
+    <height>450</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -457,7 +457,7 @@
                </font>
               </property>
               <property name="text">
-               <string>Requests</string>
+               <string>Invitation Requests</string>
               </property>
              </widget>
             </item>
