--- a/src/qt/forms/sendcoinsentry.ui
+++ b/src/qt/forms/sendcoinsentry.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>729</width>
-    <height>150</height>
+    <height>185</height>
    </rect>
   </property>
   <property name="focusPolicy">
@@ -21,7 +21,7 @@
     <string>This is a normal payment.</string>
    </property>
    <property name="styleSheet">
-    <string notr="true">QFrame { border: 1px solid #E2E2E2; } QLabel { border: none; }</string>
+    <string notr="true">QFrame { border: none; } QLabel { border: none; }</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::NoFrame</enum>
@@ -39,7 +39,7 @@
     <property name="verticalSpacing">
      <number>8</number>
     </property>
-    <item row="0" column="1">
+    <item row="1" column="1">
      <layout class="QHBoxLayout" name="payToLayout">
       <property name="spacing">
        <number>0</number>
@@ -119,7 +119,7 @@
       </item>
      </layout>
     </item>
-    <item row="2" column="1">
+    <item row="3" column="1">
      <layout class="QHBoxLayout" name="horizontalLayoutAmount" stretch="0,0,0">
       <item>
        <widget class="MeritAmountField" name="payAmount"/>
@@ -149,7 +149,7 @@
       </item>
      </layout>
     </item>
-    <item row="0" column="0">
+    <item row="1" column="0">
      <widget class="QLabel" name="payToLabel">
       <property name="text">
        <string>Pay &amp;To:</string>
@@ -162,14 +162,14 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
+    <item row="2" column="1">
      <widget class="QLineEdit" name="addAsLabel">
       <property name="toolTip">
        <string>Enter a label for this address to add it to the list of used addresses</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
+    <item row="3" column="0">
      <widget class="QLabel" name="amountLabel">
       <property name="text">
        <string>A&amp;mount:</string>
@@ -182,7 +182,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
+    <item row="2" column="0">
      <widget class="QLabel" name="labellLabel">
       <property name="text">
        <string>&amp;Label:</string>
@@ -195,7 +195,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
+    <item row="4" column="0">
      <widget class="QLabel" name="messageLabel">
       <property name="text">
        <string>Message:</string>
@@ -205,13 +205,27 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="4" column="1">
      <widget class="QLabel" name="messageTextLabel">
       <property name="toolTip">
        <string>A message that was attached to the merit: URI which will be stored with the transaction for your reference. Note: This message will not be sent over the Merit network.</string>
       </property>
       <property name="textFormat">
        <enum>Qt::PlainText</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="2">
+     <widget class="QLabel" name="label">
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Send Merit</string>
       </property>
      </widget>
     </item>
